--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/rateitapp/fde36142-6811-4e79-9871-0dd96b34d1dd'>RateIt - Full Stack Web Developer</a></h5> 
+<p><span class="badge badge-light">Australia</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://www.greatinsurancejobs.com/job/6409738/web-developer-designer/?TrackID=97736'>Web Developer/Designer job with ICW Group | 6409738</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -95,7 +99,7 @@ Spark Platform Team leading a project around performance and reliability?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.boxedred.com/blog/careers/web-developer/'>Web Developer - Boxed Red Marketing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.boxedred.com/blog/careers/web-developer/'>Web Developer - Boxed Red Marketing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -115,7 +119,7 @@ Spark Platform Team leading a project around performance and reliability?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Altenar/743999666340022-web-developer'>Altenar Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Altenar/743999666340022-web-developer'>Altenar Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -125,7 +129,7 @@ Spark Platform Team leading a project around performance and reliability?...</p>
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-web-developer-14079'>Senior Web Developer - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-web-developer-14079'>Senior Web Developer - Experian Careers</a></h5> 
 <p><span class="badge badge-light">United States  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -169,7 +173,7 @@ Spark Platform Team leading a project around performance and reliability?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/automationanywhere/job/okFnbfwh'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/okFnbfwh'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -229,7 +233,7 @@ Spark Platform Team leading a project around performance and reliability?...</p>
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211106559/JavaScript-Full-Stack-Web-Developer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>JavaScript Full Stack Web Developer | CV-Library.co.uk | 211106559</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211106559/JavaScript-Full-Stack-Web-Developer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>JavaScript Full Stack Web Developer | CV-Library.co.uk | 211106559</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -245,7 +249,7 @@ Spark Platform Team leading a project around performance and reliability?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -332,7 +336,7 @@ Spark Platform Team leading a project around performance and reliability?...</p>
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://medthink.applytojob.com/apply/vb7MDDUZ1m/Junior-Web-Developer?source=GS'>Junior Web Developer - MedThink - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medthink.applytojob.com/apply/vb7MDDUZ1m/Junior-Web-Developer?source=GS'>Junior Web Developer - MedThink - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Junior Web Developer at MedThink in Cary, NC.</p>
 <hr/>
@@ -451,10 +455,6 @@ Develop process requirements and implement product development and release
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://www.s1jobs.com/job/education-teaching/educational-research-education-teaching/glasgow/747625923.html'>FOCUS Point Web Resource Development Officer (Part-Time, 0.8 FTE) (256374) | Education / Teaching Jobs | s1jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dedeleads.com/job/coolblueweb-looking-for-remote-wordpress-developer/'>coolblueweb looking for Remote WordPress Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
