--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -120,7 +120,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/onxsbfwh'>RingCentral Careers - Site Reliability Engineer (Multiple Openings)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/onxsbfwh'>RingCentral Careers - Site Reliability Engineer (Multiple Openings)</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -168,7 +168,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/omvobfwa'>Splunk Careers - Cloud Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/omvobfwa'>Splunk Careers - Cloud Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  San Francisco Sydney</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -180,7 +180,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -193,7 +193,7 @@
 <p>Oct 21, 2019 ... Expedia. Are you looking to join a team that builds foundational infrastructure, 
 automation, and tools at a large scale? Are you passionate about security,?...</p>
 <hr/>
-<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Senior-or-Lead-Site-Reliability-Engineer-Government-Cloud---Top-Security-Clearance-Required_JR52112'>Senior or Lead Site Reliability Engineer Government Cloud / Top ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Senior-or-Lead-Site-Reliability-Engineer-Government-Cloud---Top-Security-Clearance-Required_JR52112'>Senior or Lead Site Reliability Engineer Government Cloud / Top ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Senior or Lead Site Reliability Engineer Government Cloud / Top Security 
 Clearance Required. California - San Francisco Virginia - Herndon?...</p>
@@ -214,7 +214,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -240,7 +240,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -256,7 +256,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://axosoft.breezy.hr/p/7fe0a4b78be7-site-reliability-engineer'>Site Reliability Engineer at Axosoft</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axosoft.breezy.hr/p/7fe0a4b78be7-site-reliability-engineer'>Site Reliability Engineer at Axosoft</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -316,7 +316,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coya.join.com/jobs/452668-site-reliability-engineer-sre-devops-engineer-m-w'>Job @ Coya (Berlin): Site Reliability Engineer (SR... | JOIN</a></h5> 
+<h5><a href='https://coya.join.com/jobs/452668-site-reliability-engineer-sre-devops-engineer-m-w'>Job @ Coya (Berlin): Site Reliability Engineer (SR... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -387,7 +387,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/stars-group/job/otr1afwP'>The Stars Group Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/otr1afwP'>The Stars Group Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
